STARCH-933 environment configuration and console logging for type container bootstrap