@@ -11,6 +11,10 @@
 	<artifactId>iu-java-type-boot</artifactId>
 	<name>IU Type Introspection Container Bootstrap</name>
 
+	<properties>
+    <argLine>-ea --add-modules ALL-MODULE-PATH --add-exports iu.util.logging/iu.logging.boot=iu.util.type.boot -XX:+EnableDynamicAgentLoading</argLine>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
@@ -26,7 +30,6 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>iu-java-logging</artifactId>
 			<version>${project.version}</version>
-			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
